--- a/index.html
+++ b/index.html
@@ -106,8 +106,10 @@ class: center, middle, inverse, title-slide
 
 # Phylogenetic model in RevBayes
 
+&lt;center&gt;
+&lt;img align = "center" src = "images/dayhoff_model.png" height = "500px" width = "450px"&gt;
+&lt;/center&gt;
 
-&lt;img align = "center" src = "images/GTR_model.png" height = "380px" width = "1000px"&gt;
 
 ---
 
@@ -263,6 +265,7 @@ class:center
 &lt;/br&gt;
 
 &lt;img align = "center" src = "images/yay.gif" height = "400px" width = "400px"&gt;
+
     </textarea>
 <style data-target="print-only">@media screen {.remark-slide-container{display:block;}.remark-slide-scaler{box-shadow:none;}}</style>
 <script src="https://remarkjs.com/downloads/remark-latest.min.js"></script>
